--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,41 +1,45 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Java CI with Maven
+name: Run Tests and Email Report
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
-  build:
-
+  test-and-email:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-    - name: Notify Microsoft Teams
-      if: always()
-      run: |
-        curl -H 'Content-Type: application/json' \ -d "{\"text\": \"Selenium Cucumber tests have finished. View results in GitHub Actions.\"}" \${{ secrets.TEAMS_WEBHOOK }}
-      
+      - name: Build and Run Tests
+        run: |
+          cd CucumberTestNGTestAutomation
+          mvn test
+
+      - name: Send Email with Report
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          username: monisha131211@gmail.com
+          password: kmschasntnlnlfop
+          subject: Test Report - ${{ github.repository }}
+          to: mageshgovindarajaulu@gmail.com
+          from: monisha131211@gmail.com
+          secure: true
+          body: |
+            Hello,
+
+            Please find the test report attached.
+            
+            Regards,
+            GitHub Actions
+          attachments: CucumberTestNGTestAutomation/test-output/emailable-report.html
